--- a/login.html
+++ b/login.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hi Sayang <3</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Hi Sayang &lt;3</title>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <style>
@@ -36,42 +37,35 @@
       padding: 10px;
       margin: 10px 0;
       border: 3px solid #8b0000;
-      font-family: 'Press Start 2P', cursive;
-      font-size: 10px;
-      text-align: center;
+      font-size: 12px;
     }
     button {
-      background: #8b0000;
-      color: #fff;
+      background-color: #8b0000;
+      color: white;
       cursor: pointer;
     }
-    .error {
-      color: #d90429;
-      font-size: 10px;
+    button:hover {
+      background-color: #a30000;
     }
   </style>
 </head>
 <body>
   <div class="login-box">
     <h2>Hi Sayang &lt;3</h2>
-    <input type="text" id="username" placeholder="USERNAME" />
-    <input type="password" id="password" placeholder="PASSWORD" />
-    <button onclick="login()">START</button>
-    <p class="error" id="error"></p>
+    <input type="text" id="username" placeholder="Enter username">
+    <input type="password" id="password" placeholder="Enter password">
+    <button onclick="login()">Log In</button>
   </div>
-
-  <audio autoplay loop>
-    <source src="music/background.mp3" type="audio/mp3">
-  </audio>
 
   <script>
     function login() {
-      const u = document.getElementById('username').value.trim();
-      const p = document.getElementById('password').value.trim();
-      if (u === 'baby' && p === '03102002') {
-        window.location.href = 'loading.html';
+      const user = document.getElementById("username").value;
+      const pass = document.getElementById("password").value;
+
+      if (user === "baby" && pass === "03102002") {
+        window.location.href = "main.html";
       } else {
-        document.getElementById('error').textContent = 'WRONG! TRY AGAIN.';
+        alert("Username or password is incorrect. Try again ya sayang!");
       }
     }
   </script>
