--- a/profile.html
+++ b/profile.html
@@ -5,6 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profile</title>
   <link rel="stylesheet" href="css/style.css">
+  <style>
+    .profile-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+    .profile-box {
+      background-color: #fff;
+      padding: 20px;
+      border: 2px solid #ccc;
+      border-radius: 15px;
+      box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
+    .profile-pics {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 15px;
+    }
+
+    .profile-pic {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid #8b0000;
+    }
+
+    .back-btn {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      text-decoration: none;
+      font-weight: bold;
+      background-color: #fce4ec;
+      padding: 8px 12px;
+      border-radius: 8px;
+      color: #8b0000;
+    }
+  </style>
 </head>
 <body>
   <div class="page-container">
@@ -32,12 +77,6 @@
           <p><strong>Level:</strong> Lvl.45 Boyfriend</p>
         </div>
       </div>
-
-      <!-- Birthday Wish Button -->
-      <a href="wishes.html" class="redeem-btn">💌 Birthday Wishes</a>
-
-      <!-- Since Date -->
-      <p class="since-text">Since 2014</p>
     </div>
   </div>
 </body>
