--- a/profile.html
+++ b/profile.html
@@ -1,41 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Profile</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
   <style>
-    .profile-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
-    .profile-box {
-      background-color: #fff;
-      padding: 20px;
-      border: 2px solid #ccc;
-      border-radius: 15px;
-      box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.1);
+    body {
+      background-color: #fff2f2;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
       text-align: center;
+      color: #6b394d;
     }
 
-    .profile-pics {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin-bottom: 15px;
-    }
-
-    .profile-pic {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 2px solid #8b0000;
+    .page-container {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 20px;
+      position: relative;
     }
 
     .back-btn {
@@ -47,7 +31,61 @@
       background-color: #fce4ec;
       padding: 8px 12px;
       border-radius: 8px;
-      color: #8b0000;
+      color: #9b5b6e;
+      font-family: 'Segoe UI', sans-serif;
+      font-size: 16px;
+    }
+
+    .profile-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      padding-top: 50px;
+    }
+
+    .hearts-row {
+      font-size: 24px;
+      margin-bottom: 20px;
+      color: #f48ca5;
+      user-select: none;
+    }
+
+    .profile-box {
+      background-color: #ffe6ec;
+      border-radius: 20px;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      max-width: 350px;
+      margin: 0 auto;
+      text-align: center;
+      color: #6b394d;
+    }
+
+    .profile-pics {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin-bottom: 20px;
+    }
+
+    .profile-pic {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      border: 3px solid #ffc6d0;
+      object-fit: cover;
+    }
+
+    .profile-info p {
+      margin: 8px 0;
+      font-size: 16px;
+      color: #6b394d;
+    }
+
+    .profile-info p strong {
+      color: #af4c74;
     }
   </style>
 </head>
@@ -67,8 +105,8 @@
       <div class="profile-box">
         <!-- Profile Pictures -->
         <div class="profile-pics">
-          <img src="images/profile_real.jpg" alt="Real Picture" class="profile-pic">
-          <img src="images/profile_pixel.jpg" alt="Pixel Character" class="profile-pic">
+          <img src="images/profile_real.jpg" alt="Real Picture" class="profile-pic" />
+          <img src="images/profile_pixel.jpg" alt="Pixel Character" class="profile-pic" />
         </div>
         <div class="profile-info">
           <p><strong>Name:</strong> Atif Haziq</p>
