--- a/feed.html
+++ b/feed.html
@@ -1,30 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Feed</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
+  <style>
+    body {
+      background-color: #fff2f2;
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      color: #6b394d;
+    }
+
+    .page-container {
+      max-width: 700px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    /* Home button styled like Back button */
+    .home-btn {
+      display: inline-block;
+      margin-top: 10px;
+      text-decoration: none;
+      color: #9b5b6e;
+      font-weight: bold;
+      font-size: 16px;
+    }
+
+    .page-title {
+      margin-top: 20px;
+      font-size: 24px;
+      color: #6b394d;
+    }
+
+    .feed-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 15px;
+      margin-top: 20px;
+    }
+
+    .feed-item img {
+      width: 100%;
+      border-radius: 15px;
+      object-fit: cover;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+  </style>
 </head>
 <body>
   <div class="page-container">
+
     <!-- Home Button -->
-    <a href="main.html" class="home-btn">🏠 Home</a>
+    <a href="main.html" class="home-btn">← Home</a>
     
-    <h1 class="page-title">🖼 Our Moments</h1>
+    <h1 class="page-title">Our Moments</h1>
 
     <div class="feed-grid">
       <!-- Placeholder images -->
-      <div class="feed-item"><img src="images/feed1.jpg" alt="Moment 1"></div>
-      <div class="feed-item"><img src="images/feed2.jpg" alt="Moment 2"></div>
-      <div class="feed-item"><img src="images/feed3.jpg" alt="Moment 3"></div>
-      <div class="feed-item"><img src="images/feed4.jpg" alt="Moment 4"></div>
-      <div class="feed-item"><img src="images/feed5.jpg" alt="Moment 5"></div>
-      <div class="feed-item"><img src="images/feed6.jpg" alt="Moment 6"></div>
-      <div class="feed-item"><img src="images/feed7.jpg" alt="Moment 7"></div>
-      <div class="feed-item"><img src="images/feed8.jpg" alt="Moment 8"></div>
-      <div class="feed-item"><img src="images/feed9.jpg" alt="Moment 9"></div>
+      <div class="feed-item"><img src="images/feed1.jpg" alt="Moment 1" /></div>
+      <div class="feed-item"><img src="images/feed2.jpg" alt="Moment 2" /></div>
+      <div class="feed-item"><img src="images/feed3.jpg" alt="Moment 3" /></div>
+      <div class="feed-item"><img src="images/feed4.jpg" alt="Moment 4" /></div>
+      <div class="feed-item"><img src="images/feed5.jpg" alt="Moment 5" /></div>
+      <div class="feed-item"><img src="images/feed6.jpg" alt="Moment 6" /></div>
+      <div class="feed-item"><img src="images/feed7.jpg" alt="Moment 7" /></div>
+      <div class="feed-item"><img src="images/feed8.jpg" alt="Moment 8" /></div>
+      <div class="feed-item"><img src="images/feed9.jpg" alt="Moment 9" /></div>
     </div>
+
   </div>
 </body>
 </html>
