--- a/profile.html
+++ b/profile.html
@@ -15,8 +15,8 @@
 
     .page-container {
       max-width: 600px;
-      margin: 0 auto;
-      padding: 20px;
+      margin: 0 auto;          /* No extra top margin */
+      padding: 20px 20px 30px; /* Same padding as developer.html */
     }
 
     .back-btn {
