--- a/wishes.html
+++ b/wishes.html
@@ -43,8 +43,8 @@
       display: flex;
       justify-content: center;
       gap: 20px;
-      flex-wrap: wrap;
-      margin-bottom: 40px;
+      flex-wrap: nowrap; /* Keep all in one line */
+      margin-bottom: 20px;
     }
 
     .time-box {
@@ -67,13 +67,13 @@
       margin-top: 5px;
     }
 
-    /* Tab menu styling */
+    /* Tab menu styling - stacked below countdown */
     .tab-menu {
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-top: 10px;
-      flex-wrap: wrap;
+      margin-top: 30px;
+      flex-wrap: nowrap; /* keep tabs on one line as well */
     }
 
     .home-tab {
