--- a/main.html
+++ b/main.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Main Menu</title>
 
   <!-- Pixel Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
 
   <style>
     body {
@@ -19,7 +19,7 @@
     }
 
     .home-container {
-      max-width: 800px;
+      max-width: 400px; /* narrower container for neat stacking */
       margin: 0 auto;
       padding: 40px 20px;
     }
@@ -38,9 +38,11 @@
     }
 
     .home-tab {
-      display: inline-block;
-      padding: 15px 30px;
-      background-color: #ffeaea;
+      display: block;
+      width: 100%; /* full width inside container */
+      max-width: 300px; /* max width for all buttons */
+      padding: 15px 0;
+      background-color: #ffbad2;
       border: 3px solid #7b0000;
       border-radius: 12px;
       text-decoration: none;
@@ -48,18 +50,19 @@
       font-family: 'Press Start 2P', cursive;
       box-shadow: 4px 4px 0 #7b0000;
       font-size: 0.6em;
-      width: fit-content;
+      text-align: center;
+      transition: background-color 0.3s ease;
+      user-select: none;
     }
 
     .home-tab:hover {
-      background-color: #ffbad2;
+      background-color: #ff9ac1;
     }
 
+    /* On wider screens, keep vertical stack but center container */
     @media (min-width: 600px) {
-      .tab-menu {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
+      .home-container {
+        max-width: 400px;
       }
     }
   </style>
